|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2012, PHP 5.4.1 RC1

- CLI Server:
  . "Connection: close" instead of "Connection: closed" (Gustavo)

- Core:
  . Fixed bug #61225 (Incorect lexing of 0b00*+<NUM>). (Pierrick)
  . Fixed bug #61165 (Segfault - strip_tags()). (Laruence)
  . Fixed bug #61072 (Memory leak when restoring an exception handler).
    (Nikic, Laruence)
  . Fixed bug #61011 (Crash when an exception is thrown by __autoload
    accessing a static property). (Laruence)
  . Fixed bug #61000 (Exceeding max nesting level doesn't delete numerical 
    vars). (Laruence)
  . Fixed bug #60978 (exit code incorrect). (Laruence)
  . Fixed bug #60801 (strpbrk() mishandles NUL byte). (Adam)
  . Fixed bug #60573 (type hinting with "self" keyword causes weird errors).
    (Laruence)

- Standard:
  . Fixed memory leak in substr_replace. (Pierrick)
  . make max_file_uploads ini directive settable outside of php.ini (Rasmus)

- Installation
  . Fixed bug #61172 (Add Apache 2.4 support). (Chris Jones)

- Reflection:
  . Fixed bug #60968 (Late static binding doesn't work with 
    ReflectionMethod::invokeArgs()). (Laruence)

- Array:
  . Fixed bug #61058 (array_fill leaks if start index is PHP_INT_MAX).
    (Laruence)

01 Mar 2012, PHP 5.4.0 

- Installation:
  . autoconf 2.59+ is now supported (and required) for generating the
    configure script with ./buildconf. Autoconf 2.60+ is desirable
    otherwise the configure help order may be incorrect.  (Rasmus, Chris Jones)

- Removed legacy features:
  . break/continue $var syntax. (Dmitry)
  . Safe mode and all related php.ini options. (Kalle)
  . register_globals and register_long_arrays php.ini options. (Kalle)
  . import_request_variables(). (Kalle)
  . allow_call_time_pass_reference. (Pierrick)
  . define_syslog_variables php.ini option and its associated function. (Kalle)
  . highlight.bg php.ini option. (Kalle)
  . safe_mode, safe_mode_gid, safe_mode_include_dir,